fix FF footer overlap

--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,7 @@ hr {
 }
 
 #body-section {
-  padding-left: 50px;
-  padding-right: 50px;
+  padding: 0 50px 20px 50px;
 }
 
 #copy {
